Fixed responsiveness.  Used bootstrap m-auto to keep information in 5 day forecast cards IN the cards instead of spilling over.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,6 +1,11 @@
-html, body, .container-fluid {
-  height: 100%;
-  /* fill screen with background */
+/* fill background with image */
+html, body { 
+  /* Image from https://stock.adobe.com/search?load_type=search&native_visual_search=&similar_content_id=&is_recent_search=&search_type=usertyped&k=sunset&asset_id=265728175 */
+  background: url(clouds.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 body {
@@ -13,19 +18,6 @@ body {
 p {
   font-size: 11.5px;
   color: white;
-}
-
-
-/* background image for the page */
-
-.bgimg-1 {
-  position: relative;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* Image from https://stock.adobe.com/search?load_type=search&native_visual_search=&similar_content_id=&is_recent_search=&search_type=usertyped&k=sunset&asset_id=265728175 */
-  background-image: url("./clouds.jpg");
-  height: 100%;
 }
 
 .jumbotron {
@@ -53,6 +45,7 @@ p {
 
 #currCityConditionsBox {
   border: solid 1px gray;
+  padding: 10px;
 }
 
 #currWeatherRow, #forecastHeader {
@@ -90,9 +83,8 @@ p {
   border-radius: 4px;
 }
 
-.card {
-  height: 200px;
-  margin: 15px;
+#fore5row {
+  margin-left: -30px;
 }
 
 .card:first-child {
